--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<audio data-key="37" src="sound/b4.ogg"></audio>
 
 	<!-- End Piano -->
-	<script src='http://code.jquery.com/jquery-2.2.4.min.js'></script>
+	<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 	<script>
 		$(function () {
 			$(this).keydown(function(e) {
